--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
-    "jest": "^27.0.5"
+    "jest": "^27.0.5",
+    "vue3-jest": "^27.0.0-alpha.1"
   }
 }
